--- a/contas-front-angular/src/app/components/contas/contas-add/contas-add.component.html
+++ b/contas-front-angular/src/app/components/contas/contas-add/contas-add.component.html
@@ -1,3 +1,25 @@
-<p>
-  contas-add works!
-</p>
+<div class="row">
+  <div class="col mb-2 mt-2">
+      <h2>Adicionar Conta</h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+      <div class="form-group">
+          <label for="valor">Valor (R$)</label>
+          <input [(ngModel)]="conta.valor" type="number" class="form-control" id="valor" name="valor" placeholder="">
+      </div>
+      <div class="form-group">
+          <label for="vencimento">Vencimento</label>
+          <input [(ngModel)]="conta.vencimento" type="date" class="form-control" id="vencimento" name="vencimento" placeholder="">
+      </div>
+      <div class="form-group">
+          <label for="pesoLiquido">Credor</label>
+          <select [(ngModel)]="conta.credor.id" class="form-control" id="credor" name="credor"  placeholder="Selecione um Credor">
+            <option [value]="credor.id" *ngFor="let credor of credores">{{credor.nome}}</option>
+          </select>      
+      </div>
+      <button (click)="add()" class="btn btn-primary">Salvar</button>
+  </div>
+</div>
